--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,5 @@
-name: login
+name: gesi_mobile
 description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -11,11 +8,15 @@ environment:
 dependencies:
   change_app_package_name: ^1.0.0
   cupertino_icons: ^1.0.2
+  dio: ^4.0.4
   flutter:
     sdk: flutter
   get: ^4.6.1
   google_fonts: ^2.1.0
+  hive: ^2.0.5
+  hive_flutter:
   material_design_icons_flutter: ^5.0.6595
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
