--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -17,3 +17,4 @@ linter:
     non_constant_default_value: false
     prefer_const_constructors_in_immutables: false
     unchecked_use_of_nullable_value: false
+    constant_identifier_names: false
