--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   hive: ^2.0.5
   hive_flutter:
   material_design_icons_flutter: ^5.0.6595
+  salomon_bottom_bar: ^3.2.0
+  syncfusion_flutter_calendar: ^19.4.53
   web_socket_channel: ^2.1.0
 
 dev_dependencies:
