--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "files.autoSave": "afterDelay",
-  // "workbench.colorTheme": "GitHub Light",
-  "workbench.colorTheme": "Dracula",
   "bracketPairColorizer.showVerticalScopeLine": false,
   "terminal.integrated.fontFamily": "Cascadia Code",
-  "editor.fontFamily": "'Cascadia Code', 'Courier New', monospace"
+  "window.autoDetectColorScheme": true,
+  "workbench.preferredLightColorTheme": "GitHub Light Default",
+  "workbench.preferredDarkColorTheme": "Dracula",
+  "editor.fontFamily": "'Cascadia Code', 'Courier New', monospace",
+  "workbench.colorTheme": "GitHub Light Default",
 }
