--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^2.1.0
   hive: ^2.0.5
   hive_flutter:
+  fl_chart: ^0.45.0
   material_design_icons_flutter: ^5.0.6595
   salomon_bottom_bar: ^3.2.0
   syncfusion_flutter_calendar: ^19.4.53
