course list added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   salomon_bottom_bar: ^3.2.0
   syncfusion_flutter_calendar: ^19.4.53
   web_socket_channel: ^2.1.0
+  animations: ^2.0.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
