--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   "workbench.preferredLightColorTheme": "GitHub Light Default",
   "workbench.preferredDarkColorTheme": "Dracula",
   "editor.fontFamily": "'Cascadia Code', 'Courier New', monospace",
-  "workbench.colorTheme": "GitHub Light Default",
+  "workbench.colorTheme": "Dracula",
 
 }
