--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,12 @@ dependencies:
   material_design_icons_flutter: ^5.0.6595
   salomon_bottom_bar: ^3.2.0
   syncfusion_flutter_calendar: ^19.4.53
+  persistent_bottom_nav_bar: ^5.0.2
   web_socket_channel: ^2.1.0
   palette_generator: ^0.3.3
+  extended_image: ^6.3.1
   animations: ^2.0.2
+  flutter_rating_bar: ^4.0.1
   dart_amqp: ^0.2.1
 
 dev_dependencies:
@@ -36,3 +39,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/courses/
